# tmux-palette

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RUST_MIGRATION.md  package.json  tmux-palette.tmux
.cargo/: config.toml
.github/workflows/: typecheck.yml
crates/tmux-palette/: Cargo.toml
crates/tmux-palette/src/: actions.rs  cache.rs  config.rs  fuzzy.rs  lib.rs  main.rs  model.rs  render.rs  text.rs  theme.rs  tmux.rs  tui.rs
crates/tmux-palette/src/palettes/: commands.rs  find_pane.rs  mod.rs  move_pane.rs  themes.rs
src/: cli.ts  config.ts  dispatch.ts  fuzzy.ts  palette.ts  render.ts  text.ts  theme.ts  themes-bundled.ts  tmux.ts  types.ts  userConfig.ts
src/palettes/: commands.ts  find-pane.ts  move-pane.ts  themes.ts
tests/: dispatch.test.ts  fuzzy.test.ts  palette-commands.test.ts  render.test.ts  text.test.ts
