[package]
name = "tmux-palette"
version = "0.2.1"
edition = "2021"
description = "Rust port of tmux-palette"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
