[package]
name = "tmux-palette"
version = "0.2.1"
edition = "2021"
description = "Rust port of tmux-palette"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
